@@ -1,5 +1,6 @@
 2011-11-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* config.py: Added support for gconf.VALUE_LIST.
 	* plugins/facebook/, gphotoframe.ui: Started implementation for
 	  Facebook album selection (issue #98).
 
